docs(release): changelog and C ABI v1-to-v2 migration notes for 5.0.1